@@ -1,0 +1,29 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
+  metal:use-macro="context/main_template/macros/master"
+  i18n:domain="eea">
+
+<body>
+
+<div metal:fill-slot="content" class="eea-pdf-download">
+  <h2 tal:content="structure view/title">
+    Title
+  </h2>
+
+  <form tal:attributes="action string:${context/absolute_url}/${view/__name__}" method="post" tal:condition="not:view/email">
+    <div class="field eea-pdf-email">
+      <input type="email" name="email" id="email" />
+      <input class="context" type="submit" name="form.button.download" value="Send" i18n:attributes="value">
+      <span class="formHelp" tal:content="view/message">
+        Message
+      </span>
+      <textarea name="body" id="body"></textarea>
+    </div>
+  </form>
+
+  <p tal:condition="view/email" tal:content="structure view/message">
+    Message
+  </p>
+</div>
+
+</body>
+</html>
