@@ -18,6 +18,8 @@ from zope.component import queryMultiAdapter, queryUtility, queryAdapter
 
 from eea.converter.utils import absolute_url
 from eea.converter.interfaces import IConvert, IPDFOptionsMaker
+from eea.downloads.interfaces import IStorage
+from eea.epub.config import EEAMessageFactory as _
 
 
 logger = logging.getLogger('eea.epub')
@@ -389,3 +391,134 @@ class ExportView(BrowserView):
 
         inMemoryOutputFile.seek(0)
         return inMemoryOutputFile.read()
+
+
+class AsyncExportView(ExportView):
+    """ Download ePub asynchronously
+    """
+    template = ViewPageTemplateFile('download.pt')
+
+    def __init__(self, context, request):
+        super(AsyncExportView, self).__init__(context, request)
+        self._title = ''
+        self._message = _(
+            u"* The email is only used for the purpose of sending the ePub. "
+            u"We do not store it for any other use."
+        )
+        self._email = ''
+        self._link = ''
+
+    @property
+    def message(self):
+        """ Message
+        """
+        return self._message
+
+    @property
+    def title(self):
+        """ Title
+        """
+        if self._title:
+            return self._title
+
+        return _(
+          u"Enter your email address where to send '${title}' ePub when ready",
+            mapping={
+                'title': self.context.title_or_id()
+            }
+        )
+
+    @property
+    def email(self):
+        """ User email
+        """
+        return self._email
+
+    def _redirect(self, msg='', title=''):
+        """ Redirect
+        """
+        self.request.set('disable_border', 1)
+        self.request.set('disable_plone.leftcolumn', 1)
+        self.request.set('disable_plone.rightcolumn', 1)
+        if msg:
+            self._message = msg
+        if title:
+            self._title = title
+        return self.template()
+
+    def link(self):
+        """ Download link
+        """
+        if not self._link:
+            storage = IStorage(self.context).of('epub')
+            self._link = storage.absolute_url()
+        return self._link
+
+    def period(self):
+        """ Wait period
+        """
+        ptype = getattr(self.context, 'portal_type', '')
+        if ptype.lower() in ('collection', 'topic', 'folder', 'atfolder'):
+            return _(u"minutes")
+        return _(u"seconds")
+
+    def finish(self, email=''):
+        """ Finish download
+        """
+        if email:
+            self._email = email
+            self._title = _(
+                u"An email will be sent to you when the ePub is ready"
+            )
+            self._message = _(
+                u"If you don't have access to your email address "
+                u"check <a href='${link}'>this link</a> in a few ${period}.",
+                mapping={
+                    "link": self.link(),
+                    "period": self.period()
+            })
+        return self._redirect()
+
+    def download(self, email='', **kwargs):
+        """ Download
+        """
+        logger.warn("Not implemented yet")
+        return self.finish(email=email)
+
+    def post(self, **kwargs):
+        """ POST
+        """
+        if not self.request.get('form.button.download'):
+            return self._redirect('Invalid form')
+
+        email = self.request.get('email')
+
+        # Filter bots
+        if self.request.get('body'):
+            return self.finish(email=email)
+
+        if not email:
+            return self.finish(email=email)
+
+        return self.download(email, **kwargs)
+
+    def __call__(self, *args, **kwargs):
+
+        support = queryMultiAdapter((self.context, self.request),
+                                    name='pdf.support')
+
+        async = getattr(support, 'async', lambda: False)()
+        if not async:
+            return super(AsyncExportView, self).__call__()
+
+        # We have the email, continue
+        email = getattr(support, 'email', lambda: None)()
+        if email:
+            return self.download(email, **kwargs)
+
+        # Email provided
+        if self.request.method.lower() == 'post':
+            return self.post(**kwargs)
+
+        # Ask for email
+        return self._redirect()
