@@ -1,0 +1,7 @@
+"""Common configuration constants
+"""
+
+PROJECTNAME = 'eea.epub'
+
+from zope.i18nmessageid import MessageFactory
+EEAMessageFactory = MessageFactory('eea')
