@@ -3,6 +3,10 @@ Changelog
 
 5.9.dev0 - (unreleased)
 -----------------------
+* WIP:
+  Feature: Added possibility to download documents as ePub asynchronously
+  [voineali refs #22971]
+
 * Feature: Added possibility to add a fallback ePub file within context called
   **action-download-epub** in order to temporarily stop dynamic ePub
   generation and statically return this item.
